--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>3.0.3</version> <!-- 指定统一版本 -->
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
