--- a/services/pom.xml
+++ b/services/pom.xml
@@ -87,5 +87,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.0</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.github.pagehelper</groupId>-->
+<!--            <artifactId>pagehelper</artifactId>-->
+<!--            <version>5.3.0</version>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
